# hcBLAS

./: CMakeLists.txt  README.md  build.sh  clean.sh  hipifyBLAS  install.sh  uninstall.sh
docs/: make.bat
examples/: CMakeLists.txt  build.sh  cgemm_example.cpp  ddot_example.cpp  sgemm_example.cpp
lib/src/: CMakeLists.txt  hcblas.cpp  hipblas.cpp  hipblas_hcc.cpp  hipblas_nvcc.cpp
lib/src/blas/: CMakeLists.txt
lib/src/blas/autogemm/: .AutoGemm.py.swp  .CMakeLists.txt.swp  .KernelParameters.py.swp  .hcblasKernel.py.swn  .hcblasKernel.py.swo  .hcblasKernel.py.swp  AutoGemmParameters.py  CMakeLists.txt  Common.py  KernelSelection.py  autogemm.cpp  autogemm.h  hcblasKernel.cpp  hcblasKernel.py  helper_func.h  kernelSelection.cpp  userKernel.cpp
lib/src/blas/cgemm/: cgemm_array_kernels.cpp  cgemm_array_kernels.h  cgemm_array_kernels_batch.cpp  cgemm_array_kernels_rMajor.cpp  cgemm_array_kernels_rMajor_batch.cpp  cgemm_array_view_kernels.cpp  cgemm_array_view_kernels.h  cgemm_array_view_kernels_batch.cpp  cgemm_array_view_kernels_rMajor.cpp  cgemm_array_view_kernels_rMajor_batch.cpp  cgemm_array_view_wrapper.cpp  cgemm_array_wrapper.cpp
lib/src/blas/cscal/: CMakeLists.txt  cscal_array.cpp
lib/src/blas/csscal/: CMakeLists.txt  csscal_array.cpp
lib/src/blas/dasum/: dasum_array.cpp  dasum_array_view.cpp
lib/src/blas/daxpy/: daxpy_array.cpp
lib/src/blas/dcopy/: dcopy_array.cpp  dcopy_array_view.cpp
lib/src/blas/ddot/: ddot_array.cpp  ddot_array_view.cpp
lib/src/blas/dgemm/: dgemm_NN_kernels.cpp  dgemm_NT_kernels.cpp  dgemm_TN_kernels.cpp  dgemm_array_kernels.cpp  dgemm_array_kernels.h  (+4 more)
lib/src/hcc_detail/: hipblas.cpp
lib/src/include/: hcblas.h
lib/src/nvcc_detail/: hipblas.cpp
source/: CMakeLists.txt  ampblaslib.cpp  ampblaslib.h  cgemm.cpp  cgemm_array_kernels.cpp  cgemm_array_kernels_rMajor_batch.cpp  cgemm_array_view_kernels.cpp  cgemm_array_view_kernels_rMajor.cpp  cgemm_array_view_kernels_rMajor_batch.cpp  cgemm_kernels.cpp  cgemm_kernels.h  cgemm_kernels_batch.cpp  cgemm_kernels_rMajor.cpp  cgemm_kernels_rMajor_batch.cpp  cgemm_wrapper.cpp  dasum.cpp  dcopy.cpp  ddot.cpp  dscal.cpp  hcblas.h  hcblaslib.h  sasum.cpp  saxpy.cpp  scopy.cpp  sdot.cpp  sdot_array_view.cpp  sgemm.cpp  sgemm_array_kernels_batch.cpp  sgemm_array_view_kernels.h  sgemm_array_wrapper.cpp  sgemm_kernels.cpp  sgemm_kernels.h  sgemm_kernels_batch.cpp  sgemm_kernels_rMajor.cpp  sgemm_kernels_rMajor_batch.cpp  sgemm_wrapper.cpp  sgemv.cpp  sger.cpp  sscal.cpp  sscal_array_view.cpp
source/test/cgemm_test/: Makefile  cgemm_test.cpp
source/test/dasum_test/: Makefile  dasum_test.cpp
source/test/dcopy_test/: Makefile  dcopy_test.cpp
source/test/ddot_test/: Makefile  ddot_test.cpp
source/test/dscal_test/: Makefile  dscal_test.cpp
source/test/sasum_test/: Makefile  sasum_test.cpp
source/test/saxpy_test/: Makefile  saxpy_test.cpp
source/test/scopy_test/: Makefile  scopy_test.cpp
source/test/sdot_test/: Makefile  sdot_test.cpp
source/test/sgemm_test/: Makefile  sgemm  sgemm_test.cpp
source/test/sgemv_test/: Makefile  sgemv_test.cpp
source/test/sger_test/: Makefile  sger_test.cpp
source/test/sscal_test/: Makefile  sscal_test.cpp
source/testfiles/: CMakeLists.txt  cgemm_test.cpp  dasum_test.cpp  dcopy_test.cpp  ddot_test.cpp  dscal_test.cpp  sasum_test.cpp  saxpy_test.cpp  scopy_test.cpp  sdot_test.cpp  sgemm_test.cpp  sgemv_test.cpp  sger_test.cpp  sscal_test.cpp
source/testfiles/Unit_tests/: Unittest.sh  saxpy_input.txt
src/: CMakeLists.txt
src/blas/cgemm/: cgemm_array_kernels_batch.cpp  cgemm_array_view_kernels.h  cgemm_array_wrapper.cpp
src/blas/dasum/: dasum_array_view.cpp
src/blas/dscal/: dscal_array.cpp  dscal_array_view.cpp
src/blas/saxpy/: saxpy_array_view.cpp
src/blas/sdot/: sdot_array.cpp
src/blas/sgemm/: sgemm_array_kernels.cpp  sgemm_array_kernels.h  sgemm_array_kernels_rMajor.cpp  sgemm_array_view_kernels.cpp  sgemm_array_view_kernels_batch.cpp  sgemm_array_view_wrapper.cpp
src/blas/sger/: sger_array_view.cpp
test/: CMakeLists.txt
test/BLAS_benchmark_Convolution_Networks/: Input.txt  Input_timer.txt  NN_rect_MNK.txt  NN_rect_MN_K1000.txt  NN_rect_size_smallK.txt  NT_rect_MNK.txt  NT_temp.txt  README  autogemm_test.txt  runme.sh  runme_chronotimer.sh  runme_statistical_timer.sh
test/benchmark/: README  cgemm_input.txt  extracthtml_cgemm.py  extracthtml_saxpy.py  extracthtml_sgemm.py  extracthtml_sgemv.py  extracthtml_sger.py  runme.sh  runmecgemm.sh  runmesaxpy.sh  runmesgemm.sh  runmesgemv.sh  runmesger.sh  saxpy_input.txt  sgemm_input.txt  sger_input.txt
test/include/: helper_functions.h
test/src/: CMakeLists.txt  cgemm_test.cpp  dasum_test.cpp  dcopy_test.cpp  ddot_test.cpp  dscal_test.cpp  helper_functions.h  sasum_test.cpp  saxpy_test.cpp  scopy_test.cpp  sdot_test.cpp  sgemm_check.cpp  sgemm_cn_test.cpp  sgemm_test.cpp  sgemm_timer_test.cpp  sgemv_test.cpp  sger_test.cpp  sscal_test.cpp  zgemm_test.cpp
test/src/statistical_timer/: CMakeLists.txt  ctimer.h  sgemm_st_timer_test.cpp  st_timer  statisticalTimer.cpp  statisticalTimer.h  stdafx.cpp  stdafx.h  targetver.h  timer.cpp  timer.hpp
test/unit/: CMakeLists.txt  README  hcblas_cgemm.cpp  hcblas_dasum.cpp  hcblas_daxpy.cpp  hcblas_dcopy.cpp  hcblas_ddot.cpp  hcblas_dgemm.cpp  hcblas_dscal.cpp  hcblas_hgemm.cpp  hcblas_sasum.cpp  hcblas_saxpy.cpp  hcblas_scopy.cpp  hcblas_sdot.cpp  hcblas_sgemm.cpp  hcblas_sgemv.cpp  hcblas_sger.cpp  hcblas_sscal.cpp  hcblas_zgemm.cpp  saxpy_input.txt  sgemm_input.txt  sgemv_input.txt  sger_input.txt  test.sh  test_constants.h  unittest.sh
test/unit-api/: CMakeLists.txt  gtest-all.cpp  test-blas.cpp  testHelperFunctions.cpp
test/unit-hip/: CMakeLists.txt  test-hipblas.cpp  testHipBlasHelperFunctions.cpp
test/unit/gtest/: CMakeLists.txt  hcblas_cgemm.cpp  hcblas_dasum.cpp  hcblas_daxpy.cpp  hcblas_dcopy.cpp  hcblas_ddot.cpp  hcblas_dgemm.cpp  hcblas_dscal.cpp  hcblas_sasum.cpp  hcblas_saxpy.cpp  hcblas_scopy.cpp  hcblas_sdot.cpp  hcblas_sgemm.cpp  hcblas_sgemv.cpp  hcblas_sger.cpp  hcblas_sscal.cpp  hcblas_zgemm.cpp  test_constants.h
(+187 files in other folders)
